fix: Fix call to action section alignment

--- a/style.css
+++ b/style.css
@@ -146,15 +146,11 @@ ul {
     background-color: #3882f6;
     margin: 50px 200px;
     border-radius: 10px;
-    padding: 40px 200px;
+    padding: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 260px;
-}
-
-.content-call-text {
-    
+    gap: 300px;
 }
 
 .content-call-text, 
@@ -164,3 +160,22 @@ ul {
     padding: 0;
     margin: 0;
 }
+
+.footer {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.content-call-label .signup {
+    border: solid white;
+    padding: 0;
+}
+
+.footer 
+ h4 {
+    color: white;
+    font-weight: 100;
+ } 
